--- a/package.json
+++ b/package.json
@@ -23,5 +23,13 @@
   "bugs": {
     "url": "https://github.com/oiv84/frontend-project-lvl1/issues"
   },
-  "homepage": "https://github.com/oiv84/frontend-project-lvl1#readme"
+  "homepage": "https://github.com/oiv84/frontend-project-lvl1#readme",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "eslint": "^7.30.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4"
+  }
 }
