--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "brain games",
-  "main": "/bin/brain-games.js",
   "type": "module",
   "bin": {
-    "brain-games": "bin/brain-games.js",
+    "brain-prime": "bin/brain-prime.js",
     "brain-even": "bin/brain-even.js",
     "brain-calc": "bin/brain-calc.js",
     "brain-gcd": "bin/brain-gcd.js",
